--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -104,11 +104,11 @@
             </div>
             <div class="Notice-search">
                 <form action="" method="">
-                    <select name="noticeSearch" class="notice-select-search">
+                    <select name="cate" class="cate">
                         <option value="noticeTitle">제목</option>
                         <option value="noticeContent">내용</option>
                     </select>
-                    <input type="text" class="notice-search-bar" name="noticeSearchByTitleAndContent">
+                    <input type="text" class="keyword" name="keyword">
                     <button class="notice-search-btn">
                         검색
                     </button>
